# ssmtp

./: COPYRIGHT  ChangeLog  README  TLS  configure  configure.ac  ssmtp.8  ssmtp.c  ssmtp.conf.5
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  support.md
.github/workflows/: c-cpp.yml  debian.yml  ubuntu.yml
md5auth/: md5.h  md5c.c
